syntax = "proto3";

import "common/common.proto";
option java_multiple_files = true;
option java_package = "com.bbeerbear.grpccollegecost.server";

message EduCostStatQueryThreeRequest {
  int32 year = 1;
  common.Type type = 2;
  common.Length length = 3;
}

message EduCostStatQueryThreeState{
  string state = 1;
  int32 overallExpense = 2;
}

message EduCostStatQueryThreeResponse {
  repeated EduCostStatQueryThreeState eduCostStatQueryThreeState = 1;
}

service EduCostStatQueryThree {
  rpc getEduCostStatQueryThree(EduCostStatQueryThreeRequest) returns (EduCostStatQueryThreeResponse);
}
